--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://ckdesigns.netlify.app/"
+baseURL = "https://www.ckdesignskandb.com/"
 languageCode = "en-us"
 summaryLength = 30
 [[menu.main]]
