--- a/data/design.yaml
+++ b/data/design.yaml
@@ -9,7 +9,7 @@ colors:
 home_slideshow:
   slideshow:
   - image: "/uploads/bath-1.jpg"
-    link_text: Kitchen & Bathroom Remodels
+    link_text: Visit the gallery
     link: "/bathroom-remodels/"
     heading: CK Designs Kitchen & Bath
   - heading: CK Designs Kitchen & Bath
