--- a/config.toml
+++ b/config.toml
@@ -23,6 +23,10 @@ parent = "Design & Remodeling Services"
 url = "/cabinets-countertops-hardware/"
 weight = 1
 [[menu.main]]
+name = "Financing"
+url = "/financing"
+weight = 5
+[[menu.main]]
 name = "Contact"
 url = "/contact-information"
 weight = 6
