--- a/data/profile.yaml
+++ b/data/profile.yaml
@@ -4,10 +4,10 @@ primary_contact:
   full_name: Carly Kalbrunner
   email: ckdesignskandb@gmail.com
   phone: "(770) 670-3813"
-  street_address: ''
-  city: ''
-  state: ''
-  zip_code: 
+  street_address: '21 Eastbrook Bend, Suite 210'
+  city: 'Peachtree City'
+  state: 'GA'
+  zip_code: 30269
 search_engine_optimization:
   title_tag: Remodeling Contractor | Fayetteville, GA | CK Designs Kitchen &amp; Bath
   meta_description: CK Designs Kitchen &amp; Bath offers complete design and remodel
